@@ -1,5 +1,7 @@
 CHANGES IN FLTK 1.1.4
 
+	- Fl_File_Chooser was very close for multiple file
+	  selection in large directories (STR #140)
 	- Fl_Text_Display/Editor did not disable the current
 	  selection when focus was shifted to another widget
 	  (STR #131)
